//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  firstName String [not null]
  lastName String [not null]
  isAdmin Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  documents documents [not null]
  rootUserPermissions root_user_permissions [not null]
  studentGroups student_groups [not null]
  view_DocumentUserPermissions view__document_user_permissions [not null]
  view_AllDocumentUserPermissions view__all_document_user_permissions [not null]
  cmsSettings cms_settings
}

Table cms_settings {
  id String [pk]
  user users [not null]
  userId String [unique, not null]
  activeBranch String
  activePath String
  token String
  tokenExpiresAt DateTime
  refreshToken String
  refreshTokenExpiresAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table student_groups {
  id String [pk]
  name String [not null, default: '']
  description String [not null, default: '']
  parentId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  rootGroupPermissions root_group_permissions [not null]
  parent student_groups
  children student_groups [not null]
  users users [not null]
  view_DocumentUserPermissions view__document_user_permissions [not null]
  view_AllDocumentUserPermissions view__all_document_user_permissions [not null]
}

Table documents {
  id String [pk]
  authorId String [not null]
  type String [not null]
  data Json [not null]
  parentId String
  documentRootId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  author users [not null]
  documentRoot document_roots [not null]
  parent documents
  children documents [not null]
  view_DocumentUserPermissions view__document_user_permissions [not null]
  view_AllDocumentUserPermissions view__all_document_user_permissions [not null]
}

Table allowed_actions {
  id String [pk]
  documentType String [not null]
  action String [not null]

  indexes {
    (documentType, action) [unique]
  }
}

Table document_roots {
  id String [pk]
  access Access [not null, default: 'RW_DocumentRoot']
  sharedAccess Access [not null, default: 'None_DocumentRoot']
  documents documents [not null]
  rootGroupPermissions root_group_permissions [not null]
  rootUserPermissions root_user_permissions [not null]
  view_DocumentUserPermissions view__document_user_permissions [not null]
  view_AllDocumentUserPermissions view__all_document_user_permissions [not null]
}

Table root_group_permissions {
  id String [pk]
  access Access [not null]
  studentGroupId String [not null]
  documentRootId String [not null]
  documentRoot document_roots [not null]
  studentGroup student_groups [not null]
  view_DocumentUserPermissions view__document_user_permissions [not null]
  view_AllDocumentUserPermissions view__all_document_user_permissions [not null]
}

Table root_user_permissions {
  id String [pk]
  access Access [not null]
  userId String [not null]
  documentRootId String [not null]
  documentRoot document_roots [not null]
  user users [not null]
  view_DocumentUserPermissions view__document_user_permissions [not null]
  view_AllDocumentUserPermissions view__all_document_user_permissions [not null]
}

Table sessions {
  sid String [pk]
  sess Json [not null]
  expire DateTime [not null]
}

Table view__all_document_user_permissions {
  documentRootId String [not null]
  userId String [not null]
  access Access [not null]
  documentId String [not null]
  rootUserPermissionId String
  rootGroupPermissionId String
  groupId String
  accessRank Int [not null]
  documentRoot document_roots [not null]
  user users [not null]
  document documents [not null]
  rootUserPermission root_user_permissions
  rootGroupPermission root_group_permissions
  group student_groups

  indexes {
    (documentRootId, userId, documentId, accessRank) [unique]
  }
}

Table view__document_user_permissions {
  documentRootId String [not null]
  userId String [not null]
  access Access [not null]
  documentId String [not null]
  rootUserPermissionId String
  rootGroupPermissionId String
  groupId String
  documentRoot document_roots [not null]
  user users [not null]
  document documents [not null]
  rootUserPermission root_user_permissions
  rootGroupPermission root_group_permissions
  group student_groups

  indexes {
    (documentRootId, userId, access, documentId) [unique]
  }
}

Table view__users_documents {
  userId String [not null]
  id String [not null]
  access Access [not null]
  sharedAccess Access [not null]
  groupPermissions Json [not null]
  userPermissions Json [not null]
  documents Json [not null]

  indexes {
    (id, userId) [unique]
  }
}

Table documents {
  documentsId String [ref: > documents.id]
  documentsId String [ref: > documents.id]
}

Table StudentGroupToUser {
  studentgroupsId String [ref: > student_groups.id]
  usersId String [ref: > users.id]
}

Enum Access {
  RO_DocumentRoot
  RW_DocumentRoot
  None_DocumentRoot
  RO_StudentGroup
  RW_StudentGroup
  None_StudentGroup
  RO_User
  RW_User
  None_User
}

Ref: cms_settings.userId - users.id [delete: Cascade]

Ref: student_groups.parentId - student_groups.id [delete: Cascade]

Ref: documents.authorId > users.id [delete: Cascade]

Ref: documents.documentRootId > document_roots.id [delete: Cascade]

Ref: documents.parentId - documents.id [delete: Cascade]

Ref: root_group_permissions.documentRootId > document_roots.id [delete: Cascade]

Ref: root_group_permissions.studentGroupId > student_groups.id [delete: Cascade]

Ref: root_user_permissions.documentRootId > document_roots.id [delete: Cascade]

Ref: root_user_permissions.userId > users.id [delete: Cascade]

Ref: view__all_document_user_permissions.documentRootId > document_roots.id

Ref: view__all_document_user_permissions.userId > users.id

Ref: view__all_document_user_permissions.documentId > documents.id

Ref: view__all_document_user_permissions.rootUserPermissionId > root_user_permissions.id

Ref: view__all_document_user_permissions.rootGroupPermissionId > root_group_permissions.id

Ref: view__all_document_user_permissions.groupId > student_groups.id

Ref: view__document_user_permissions.documentRootId > document_roots.id

Ref: view__document_user_permissions.userId > users.id

Ref: view__document_user_permissions.documentId > documents.id

Ref: view__document_user_permissions.rootUserPermissionId > root_user_permissions.id

Ref: view__document_user_permissions.rootGroupPermissionId > root_group_permissions.id

Ref: view__document_user_permissions.groupId > student_groups.id